[package]
name = "traewelling-dashboard-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1"
dotenv = "0.15.0"
r2d2 = { version = "0.8.10", default-features = false }
r2d2_sqlite = { version = "0.21.0", features = ["bundled"], default-features = false }
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json", "rustls-tls"], default-features = false }
rss = "2.0.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
